--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website-workshop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avabirtwistle.github.io/personal-website",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
